# phosphor

./: .gitignore  Cargo.toml  LICENSE  README.md  architect.md  controls.json  phosphor_daw_ui.html  phosphor_tui_daw.html
crates/phosphor-app/: Cargo.toml
crates/phosphor-app/src/: actions.rs  lib.rs  session.rs
crates/phosphor-app/src/state/: menu.rs  mod.rs  navigation.rs  params.rs  track_ops.rs  transport_ui.rs
crates/phosphor-core/: Cargo.toml
crates/phosphor-core/benches/: audio_engine.rs
crates/phosphor-core/src/: audio.rs  clip.rs  cpal_backend.rs  engine.rs  lib.rs  metronome.rs  mixer.rs  project.rs  transport.rs
crates/phosphor-dsp/: Cargo.toml
crates/phosphor-dsp/benches/: dsp_bench.rs
crates/phosphor-dsp/src/: drum_rack.rs  dx7.rs  juno.rs  jupiter.rs  lib.rs  odyssey.rs  oscillator.rs  synth.rs
crates/phosphor-dsp/src/drum_rack/: mod.rs
crates/phosphor-dsp/src/drum_rack/racks/: kit_606.rs  kit_707.rs  kit_777.rs  kit_808.rs  kit_909.rs  kit_tsty1.rs  kit_tsty2.rs  kit_tsty3.rs  kit_tsty4.rs  kit_tsty5.rs  mod.rs
crates/phosphor-gui/: Cargo.toml
crates/phosphor-gui/src/: lib.rs
crates/phosphor-midi/: Cargo.toml
crates/phosphor-midi/src/: lib.rs  message.rs  ports.rs  ring.rs
crates/phosphor-plugin/: Cargo.toml
crates/phosphor-plugin/src/: lib.rs
crates/phosphor-tui/: Cargo.toml
crates/phosphor-tui/src/: actions.rs  app.rs  debug_log.rs  lib.rs  session.rs  splash.rs  state.rs  test_clips.rs  test_harness.rs  theme.rs  ui.rs
crates/phosphor-tui/src/app/: clips.rs  delete.rs  edit_mode.rs  keys.rs  mod.rs  piano_roll.rs  session_io.rs  tracks.rs  transport.rs  undo_redo.rs
crates/phosphor-tui/src/state/: clip_view.rs  input.rs  loop_editor.rs  menu.rs  mod.rs  navigation.rs  params.rs  track.rs  track_ops.rs  undo.rs
crates/phosphor-tui/src/ui/: bottom_bar.rs  clip_view.rs  mod.rs  overlays.rs  top_bar.rs  tracks.rs
scripts/: update-agent.sh
src/: main.rs
