[package]
name = "phosphor-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared business logic for Phosphor DAW frontends"

[dependencies]
phosphor-core.workspace = true
phosphor-dsp.workspace = true
phosphor-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
