[package]
name = "phosphor-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in DSP, oscillators, and synthesizers for the Phosphor DAW"

[dependencies]
phosphor-plugin.workspace = true
dasp.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "dsp_bench"
harness = false
