[package]
name = "phosphor-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI frontend for the Phosphor DAW (planned)"

[dependencies]
phosphor-core.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true
tracing.workspace = true
