[package]
name = "phosphor-midi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MIDI I/O and message routing for the Phosphor DAW"

[dependencies]
midir.workspace = true
wmidi.workspace = true
ringbuf.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
