[package]
name = "phosphor-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin trait definitions for the Phosphor DAW"
readme = "../../README.md"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
