[package]
name = "phosphor-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI frontend for the Phosphor DAW"

[dependencies]
phosphor-core.workspace = true
phosphor-dsp.workspace = true
phosphor-midi.workspace = true
midir.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
